--- a/README
+++ b/README
@@ -3,19 +3,36 @@
 #############
 The name munojabo stands for "munin jabber notification bot". Munojabo is a
 script that is designed to be called by munin when the values monitored by munin
-leave the "warning" or "critical" range.
+are at "warning" or "critical". As of version 2.0 this script also uses a simple
+mysql-database to store notificatons that where already send and does not send
+notifications again for six hours.
 
 ####################
 ### INSTALLATION ###
 ####################
 The script requires xmpp.py, under Debian/Ubuntu, this script is available as
-the python-xmpp package. To test if the right library is installed, simply
-execute the script with no parameters, it will throw an import-error upon
-startup.
+the python-xmpp package. Additionally, it requires the mysql-bindings for
+python, the Debian/Ubuntu package for that is called python-mysqldb.
+To test if the right libraries are installed, simply execute the script with no
+parameters, it will throw an import-error upon startup.
 
 To install the script, simply copy it to any place you like. It is usually good
 to copy it into a directory that is in the PATH environment variable, the best
 place usually is /usr/local/bin.
+
+################
+### DATABASE ###
+################
+You need a mysql-database for the cache. This cache is *really* necessary
+because munin will call this script every five minutes and you don't want to get
+messages every 5 minutes for a whole night. To set up a database, you have to 
+have mysql running. The required layout is already in db-layout.sql, simply
+execute:
+	mysql -uroot -p < db-layout.sql
+
+You still need to create a mysql-user, this will set you up on a mysql-prompt:
+	GRANT DELETE, SELECT, INSERT on munojabo.* TO 'munojabo'@'localhost' \
+		IDENTIFIED BY '<pass>';
 
 #####################
 ### CONFIGURATION ###
@@ -27,7 +44,8 @@ details.
 To configure munin to use this script, add a contact line like this to your
 munin.conf:
 
-contact.you.command <munojabo.py> <your_jid> ${var:host} "${var:graph_title}" \
+contact.you.command munojabo.py --jid=<your_jid> --host=${var:host} \
+	"--graph=${var:graph_title}" \
 	"--warnings=${loop<;>:wfields \
 		${var:label}=${var:value},${var:wrange},${var:crange}}" \
 	"--critical=${loop<;>:cfields \
@@ -35,10 +53,9 @@ contact.you.command <munojabo.py> <your_jid> ${var:host} "${var:graph_title}" \
 	"--unknown=${loop<;>:ufields \
 		${var:label}=${var:value},${var:wrange},${var:crange}}"
 
-Replace <munojabo.py> with the path to the script (or just "munojabo.py" if it
-is in your PATH). Also replace <your_jid> with the jid that should receive the
-notifications. You can optionally include a resource, without a given resource,
-the resource with the highest resource will receive the message.
+Replace <your_jid> with the jid that should receive the notifications. You can 
+optionally include a resource, without a given resource, the resource with the
+highest priority will receive the message.
 
 All in all, a call to the script might look something like this:
 	munojabo.py mati@fsinf.at pluto.htu.tuwien.ac.at Temperature --warnings= --critical=foo=5,,7: --unknown=
@@ -47,3 +64,4 @@ Note that the contact-line given above is not enough munin-configuration, since
 munin has to be configured to send warnings at all. This is outside the scope of
 this file, so please visit this page:
 	http://munin.projects.linpro.no/wiki/HowToContact
+
